<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".login.view.activities.LoginActivity">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/email_login_container"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/dimension_3"
		android:layout_marginTop="@dimen/dimension"
		android:hint="@string/email"
		app:errorContentDescription="@string/email"
		app:errorEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email_login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:imeOptions="actionNext"
			android:inputType="textEmailAddress"
			android:selectAllOnFocus="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/password_login_container"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/dimension_3"
		android:layout_marginTop="@dimen/dimension"
		android:hint="@string/password"
		app:errorEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_login_container">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/password_login"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:drawableEnd="@drawable/eye_filled"
			android:imeActionLabel="@string/sign_in"
			android:imeOptions="actionDone"
			android:inputType="textPassword"
			android:selectAllOnFocus="true" />
	</com.google.android.material.textfield.TextInputLayout>


	<Button
		android:id="@+id/login"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginStart="48dp"
		android:layout_marginEnd="48dp"
		android:enabled="false"
		android:text="@string/action_login"
		app:layout_constraintBottom_toTopOf="@id/register"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password_login_container"
		app:layout_constraintVertical_bias="0.2" />

	<Button
		android:id="@+id/register"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginHorizontal="@dimen/dimension_6"
		android:enabled="true"
		android:text="@string/sign_in"
		app:layout_constraintBottom_toTopOf="@id/sign_in_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/login"
		app:layout_constraintVertical_bias="0.2" />

	<com.google.android.gms.common.SignInButton
		android:id="@+id/sign_in_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/register"
		app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>
