<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="viewmodel"
			type="com.fiuba.seedyfiuba.login.viewmodel.RegisterViewModel" />
	</data>


	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true">

		<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
			android:id="@+id/register_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			tools:context=".login.view.activities.RegisterActivity">


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/name_register_container"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/dimension_3"
				android:layout_marginTop="@dimen/dimension"
				android:hint="@string/name"
				app:errorContentDescription="@string/email"
				app:errorEnabled="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/profile_description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionNext"
					android:inputType="textEmailAddress"
					android:selectAllOnFocus="true" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/lastname_register_container"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/dimension_3"
				android:layout_marginTop="@dimen/dimension"
				android:hint="@string/lastname"
				app:errorContentDescription="@string/email"
				app:errorEnabled="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/name_register_container">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/lastname_register"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionNext"
					android:inputType="textEmailAddress"
					android:selectAllOnFocus="true" />
			</com.google.android.material.textfield.TextInputLayout>


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/email_register_container"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/dimension_3"
				android:layout_marginTop="@dimen/dimension"
				android:hint="@string/email"
				app:errorContentDescription="@string/email"
				app:errorEnabled="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/lastname_register_container">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/email_register"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionNext"
					android:inputType="textEmailAddress"
					android:selectAllOnFocus="true" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password_register_container"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/dimension_3"
				android:layout_marginTop="@dimen/dimension"
				android:hint="@string/password"
				app:errorEnabled="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/email_register_container">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/password_register"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:drawableEnd="@drawable/eye_filled"
					android:imeOptions="actionNext"
					android:inputType="textPassword"
					android:selectAllOnFocus="true" />
			</com.google.android.material.textfield.TextInputLayout>


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password_validation_register_container"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/dimension_3"
				android:layout_marginTop="@dimen/dimension"
				android:hint="@string/password_retry"
				app:errorEnabled="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/password_register_container">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/password_validation_register"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableEnd="@drawable/eye_filled"
					android:imeActionLabel="@string/sign_in"
					android:imeOptions="actionDone"
					android:inputType="textPassword"
					android:selectAllOnFocus="true"
					android:singleLine="true" />
			</com.google.android.material.textfield.TextInputLayout>

			<androidx.appcompat.widget.AppCompatSpinner
				android:id="@+id/dropdown_menu"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/dimension_3"
				android:layout_marginVertical="@dimen/dimension_2"
				android:spinnerMode="dropdown"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/password_validation_register_container" />

			<Button
				android:id="@+id/register_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/dimension_2"
				android:enabled="true"
				android:text="@string/sign_in"
				app:layout_constraintTop_toBottomOf="@+id/dropdown_menu"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</layout>
